src/components/About/About.css
.about-container{
	display: flex;
	background-color: white;
	justify-content: center;
	align-items:center;
	width: 100%;
	height: 100vh;
	padding-bottom: 50px;
	border-bottom: 1.5px solid #5354ed;
	position: relative;
}
.about-wrapper{
	height: 90%;
	width: 90%;
	background-color: #fff;
}
#about-title{
	display:flex;
	justify-content: center;
	align-items: center;

	color:#cc6222;
}
#about{
	height: 38px;
}
.about-body{
	width: 100%;
	height: 100%;
	margin:auto;
	text-align: center;
	line-height: 30px;
	font-size: 20px;
	border-left: 2px solid #5354ed;
	border-right: 2px solid #5354ed;
	padding: 0 30px;
	position: relative;
	top: 25px;
}
.angle{
	display: none;
}
@media only screen and (min-width: 900px) {
	#about{
	height: 48px;
}
	.angle{
		display: block;
		position: absolute;
	}
	.about-body{
		border:none;
		position: relative;
		max-width: 1200px;
		display: flex;
		align-items: center;
		justify-content: center;
		font-size: 24px;
		max-height: 700px;
	}
	#about-body-content{
		width: 65%;
	}
}

